# PShowdown.ai

./: .gitignore  README.md  api.ts  config.js  config.ts  data_parser.js  data_parser.ts  index.js  index.ts  package-lock.json  package.json
.github/workflows/: node.js.yml
agent/: agent.py  config.ini  decisions.py  main.py  pyproject.toml  requirements.txt  team_setup.py
schemas/: client_to_server.ts
tests/: sample_test.test.js
types/: global.d.ts
